# Temp_ControlMod_ROS_integration

./: .env  .gitignore  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  package.xml  server.js  setup.cfg  setup.py  tailwind.config.js
control_temp_LC3/: control_temp_LC3.ino
launch/: temp_control.launch.py
scripts/: merge_temp_u_ref_csv.py
src/: middleware.js
src/app/: layout.js  page.js  providers.js
src/app/api/friends/get-all/: route.js
src/app/api/friends/send-friendship-request/: route.js
src/app/api/friends/update-friendship-status/: route.js
src/app/api/games-history/: route.js
src/app/api/rps/create-room/: route.js
src/app/api/rps/get-room/: route.js
src/app/api/rps/save-result/: route.js
src/app/auth/: page.js
src/app/chessboard/: page.js
src/app/friends/: FriendItem.js  FriendRequestItem.js  FriendRequests.js  SearchFriends.js  page.js
src/app/rps/[roomId]/: page.js
src/components/auth/: Auth.js
src/components/chessboard/: CustomChessBoard.js  customPieces.js
src/components/games/rps/: RPSGameButtons.js
src/components/header/: Header.js
src/components/home/: Chess.js  Poker.js  RockPaperScissors.js
src/components/navbar/: Navbar.js
src/components/shared/: Background.js
src/context/: SocketContext.js
src/css/: styles.css
src/helper/: helper.js
src/lib/: GetUserInfo.js  db.js  fetchUser.js  getUser.js
src/models/: RockPaperScissors.js
src/services/: API.js
src/sockets/: rpsSocket.js
src/store/: useUser.js
uart_ros_bridge/: control_metrics.py  talker_min.py  uart_temp_to_ros.py
(+3 files in other folders)
