<?xml version="1.0"?>
<package format="3">
  <name>uart_ros_bridge</name>
  <version>0.1.0</version>
  <description>UART &lt;-&gt; ROS 2 bridge for Temp_ControlMod (telemetry + setpoint commands) and online control metrics.</description>
  <maintainer email="cristian@todo.com">cristian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- External python dependency (installed via pip) -->
  <!-- pyserial -->

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
